--- a/css/stylez.css
+++ b/css/stylez.css
@@ -25,6 +25,7 @@ article {
 	background: #f1f3ed;
 	border-radius: 10px;
 	height: 450px;
+	box-shadow: 0 4px 4px rgba(0,0,0,.2);
 }
 
 
@@ -37,6 +38,7 @@ article {
 	border-bottom: 3px solid #ace3b3;
 	position: fixed;
 	width: 100%;
+	box-shadow: 0 2px 2px rgba(0,0,0,.2);
 }
 
 #main-header h1 {
