--- a/css/stylez.css
+++ b/css/stylez.css
@@ -8,6 +8,7 @@ body {
 	padding: 0;
 	background: #556;
 	font-family: 'Open Sans', sans-serif;
+	color: #2b334f;
 }
 
 a {
@@ -48,6 +49,7 @@ article {
 	position: fixed;
 	width: 100%;
 	box-shadow: 0 2px 2px rgba(0,0,0,.2);
+	z-index: 1000;
 }
 
 #main-header h1 {
@@ -69,6 +71,7 @@ article {
 nav ul {
 	list-style-type: none;
 	font-size: 1.5em;
+	margin: 0;
 }
 
 nav li {
@@ -92,6 +95,45 @@ nav li {
 	margin: 10px;
 	padding: 0;
 }
+
+/* .product ==========*/
+
+/* Figure, image, caption */
+
+figure {
+	width: 300px;
+	height: 200px;
+	margin: 20px auto;
+	padding: 0;
+	position: relative;
+}
+
+.placeholder {
+	width: 100%;
+	height: 100%;
+	background: #fff;
+}
+
+figcaption {
+	background: #2589bd;
+	opacity: .5;
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
