Completed styling and formatting with placeholder content

--- a/css/stylez.css
+++ b/css/stylez.css
@@ -17,7 +17,7 @@ a {
 }
 
 #wrapper {
-	padding-top: 100px;
+	padding-top: 80px;
 	min-height: calc(100vh - 46px);
 }
 
@@ -27,8 +27,18 @@ article {
 	margin: 20px;
 	background: #f1f3ed;
 	border-radius: 10px;
-	height: 600px;
+	height: 625px;
 	box-shadow: 0 4px 4px rgba(0,0,0,.2);
+}
+
+.clearfix::after {
+	content: "";
+	display: table;
+	clear: both;
+}
+
+.strong {
+	font-weight: 600;
 }
 
 #main-footer {
@@ -80,12 +90,6 @@ nav li {
 	float: right;
 }
 
-.clearfix::after {
-	content: "";
-	display: table;
-	clear: both;
-}
-
 
 /*-__________ Class styles __________-*/
 
@@ -132,13 +136,40 @@ figcaption {
 	width: 100%;
 }
 
-/* .specs_[name] */
+/* .product_[name] */
 
-.specs_title h2 {
+.product_desc p {
+	margin: 10px;
+	text-align: justify;
+	font-size: .9em;
+}
+
+.product_avail_logo {
+	width: 100%;
+	background: #2589bd;
+	color: #fff;
+	text-align: center;
+	padding: 5px;
+	font-weight: 600;
+}
+
+/* .specs ==================== */
+
+.h2_title h2 {
 	font-size: 1.1em;
 	margin: 5px;
 }
 
+.list {
+	margin: 2px 15px 2px;
+	font-size: .9em;
+}
+
+.specs_foot {
+	font-size: .7em;
+	font-style: italic;
+	margin: 2px 5px;
+}
 
 
 
