--- a/css/stylez.css
+++ b/css/stylez.css
@@ -8,7 +8,7 @@ body {
 	padding: 0;
 	background: #556;
 	font-family: 'Open Sans', sans-serif;
-	color: #2b334f;
+	color: #556;
 	font-size: .9em;
 }
 
@@ -66,7 +66,7 @@ article {
 #main-header h1 {
 	margin: 20px;
 	font-weight: bold;
-	font-size: 1.7em;
+	font-size: 2em;
 	color: #fff;
 	float: left;
 }
@@ -77,6 +77,10 @@ article {
 
 #main-header a:hover {
 	color: #ace3b3;
+}
+
+.u_logo:hover {
+	color: #f25f5c;
 }
 
 nav ul {
@@ -115,25 +119,26 @@ nav li {
 /* Figure, image, caption */
 
 figure {
-	width: 300px;
-	height: 200px;
+	width: 320px;
+	height: 180px;
 	margin: 20px auto;
 	padding: 0;
 	position: relative;
 }
 
-.placeholder {
+.card_img {
 	width: 100%;
 	height: 100%;
-	background: #fff;
 }
 
 figcaption {
-	background: #2589bd;
-	opacity: .5;
+	background: rgba(37,137,189,.5);
+	color: #fff;
+	font-weight: 300;
 	position: absolute;
 	bottom: 0;
 	width: 100%;
+	padding: 3px;
 }
 
 /* .product_[name] */
@@ -157,7 +162,7 @@ figcaption {
 
 .h2_title h2 {
 	font-size: 1.1em;
-	margin: 5px;
+	margin: 10px 5px;
 }
 
 .list {
